use autotools to add "make install" target
For reasoning why a transition to autotools is desired, see the commit
message of the previous patch in this series.

"make install" copies the "build", "common" dirs, as well as the "*.xsl"
files to $(prefix)/share/osmo-gsm-manuals. Prefix is typically
/usr/local. Also a pkg-config file gets installed, so the path of the
shared files can be looked up by autoconf scripts of the project
repositories. The check-depends script is installed to
$(prefix)/bin/osmo-gsm-manuals-check-depends and will be used by
project specific autoconf scripts, too.

All existing make targets ("make", "make check", "make upload") are
still working, users only need to run "autoreconf -fi" and
"./configure" beforehand.

Makefile.am uses custom install-data-hook and uninstall-local targets,
so we don't need to specify each file of the relevant subdirs in a
_DATA variable (no extra maintenance effort).

(moving manuals to project repositories 5/19)

Related: OS#3385
Change-Id: I8e7036fae062ee783cb132b14608827a82c5e7c7

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -15,8 +15,11 @@ apt-get install \
 (Note that asciidoc-dblatex is required from debian 9 on and did not exist before.)
 
 Build PDFs, run:
+  autoreconf -fi
+  ./configure
   make
-or for a parallel build using more CPU cores:
+
+or for a parallel build using more CPU cores, replace make with:
   make -j 5
 
 To update the VTY reference for a given program, use 'osmo_interact_vty.py -X',
