*.adoc: use {srcdir} for out-of-tree builds
Define a new {srcdir} variable in Makefile.asciidoc.inc, that can be
used in all adoc files. The value is the same as the Makefile variable
$(srcdir). Use {srcdir} in the "include::" lines of all adoc files.

(moving manuals to project repositories 13/19)

Related: OS#3385
Change-Id: I823e3d534cbc9ffceb68d3ab14c9f6710ff2eb2a

--- a/OsmoBSC/osmobsc-usermanual.adoc
+++ b/OsmoBSC/osmobsc-usermanual.adoc
@@ -7,15 +7,15 @@ Harald Welte <hwelte@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
-include::chapters/control.adoc[]
+include::{srcdir}/chapters/control.adoc[]
 
-include::chapters/counters.adoc[]
+include::{srcdir}/chapters/counters.adoc[]
 
-include::chapters/handover.adoc[]
+include::{srcdir}/chapters/handover.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
