--- a/OsmoMGW/osmomgw-usermanual.adoc
+++ b/OsmoMGW/osmomgw-usermanual.adoc
@@ -8,19 +8,19 @@ Daniel Willmann <dwillmann@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
 include::./common/chapters/logging.adoc[]
 
-include::chapters/configuration.adoc[]
+include::{srcdir}/chapters/configuration.adoc[]
 
-include::chapters/mgcp_extensions.adoc[]
+include::{srcdir}/chapters/mgcp_extensions.adoc[]
 
-//include::chapters/counters.adoc[]
+//include::{srcdir}/chapters/counters.adoc[]
 
 include::./common/chapters/port_numbers.adoc[]
 
