--- a/OsmoMSC/osmomsc-usermanual.adoc
+++ b/OsmoMSC/osmomsc-usermanual.adoc
@@ -8,19 +8,19 @@ Neels Hofmeyr <nhofmeyr@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
-include::chapters/control.adoc[]
+include::{srcdir}/chapters/control.adoc[]
 
-include::chapters/counters.adoc[]
+include::{srcdir}/chapters/counters.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
 include::./common/chapters/logging.adoc[]
 
-include::chapters/net.adoc[]
+include::{srcdir}/chapters/net.adoc[]
 
 include::./common/chapters/smpp.adoc[]
 
