--- a/OsmoNITB/osmonitb-usermanual.adoc
+++ b/OsmoNITB/osmonitb-usermanual.adoc
@@ -8,25 +8,25 @@ Harald Welte <hwelte@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
-include::chapters/control.adoc[]
+include::{srcdir}/chapters/control.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
 include::./common/chapters/logging.adoc[]
 
-include::chapters/net.adoc[]
+include::{srcdir}/chapters/net.adoc[]
 
 include::./common/chapters/bsc.adoc[]
 
 include::./common/chapters/bts.adoc[]
 
-include::chapters/bts-examples.adoc[]
+include::{srcdir}/chapters/bts-examples.adoc[]
 
-include::chapters/hlr.adoc[]
+include::{srcdir}/chapters/hlr.adoc[]
 
 include::./common/chapters/smpp.adoc[]
 
