--- a/OsmoSGSN/osmosgsn-usermanual.adoc
+++ b/OsmoSGSN/osmosgsn-usermanual.adoc
@@ -7,17 +7,17 @@ Harald Welte <hwelte@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
-include::chapters/control.adoc[]
+include::{srcdir}/chapters/control.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
 include::./common/chapters/logging.adoc[]
 
-include::chapters/configuration.adoc[]
+include::{srcdir}/chapters/configuration.adoc[]
 
 include::./common/chapters/gb.adoc[]
 
@@ -27,7 +27,7 @@ include::./common/chapters/oap.adoc[]
 
 include::./common/chapters/gsup.adoc[]
 
-include::chapters/counters.adoc[]
+include::{srcdir}/chapters/counters.adoc[]
 
 include::./common/chapters/port_numbers.adoc[]
 
