--- a/OsmoSTP/osmostp-usermanual.adoc
+++ b/OsmoSTP/osmostp-usermanual.adoc
@@ -5,14 +5,14 @@ Harald Welte <hwelte@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-// include::chapters/overview.adoc[]
+// include::{srcdir}/chapters/overview.adoc[]
 
 include::./common/chapters/sigtran.adoc[]
 
 include::./common/chapters/sigtran-osmocom.adoc[]
 
-//include::chapters/running.adoc[]
-// include::chapters/control.adoc[]
+//include::{srcdir}/chapters/running.adoc[]
+// include::{srcdir}/chapters/control.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
