--- a/OsmoTRX/osmotrx-usermanual.adoc
+++ b/OsmoTRX/osmotrx-usermanual.adoc
@@ -7,29 +7,29 @@ Pau Espin Pedrol <pespin@sysmocom.de>
 
 include::./common/chapters/preface.adoc[]
 
-include::chapters/overview.adoc[]
+include::{srcdir}/chapters/overview.adoc[]
 
-include::chapters/running.adoc[]
+include::{srcdir}/chapters/running.adoc[]
 
 include::./common/chapters/control_if.adoc[]
 
-include::chapters/control.adoc[]
+include::{srcdir}/chapters/control.adoc[]
 
 include::./common/chapters/vty.adoc[]
 
 include::./common/chapters/logging.adoc[]
 
-include::chapters/counters.adoc[]
+include::{srcdir}/chapters/counters.adoc[]
 
-include::chapters/configuration.adoc[]
+include::{srcdir}/chapters/configuration.adoc[]
 
-include::chapters/trx-architectures.adoc[]
+include::{srcdir}/chapters/trx-architectures.adoc[]
 
-include::chapters/trx-devices.adoc[]
+include::{srcdir}/chapters/trx-devices.adoc[]
 
-include::chapters/trx-backends.adoc[]
+include::{srcdir}/chapters/trx-backends.adoc[]
 
-include::chapters/code-architecture.adoc[]
+include::{srcdir}/chapters/code-architecture.adoc[]
 
 include::./common/chapters/trx_if.adoc[]
 
