*.adoc: include from ./common, not ../common
Change hardcoded ../common paths, which will break when moving the
project specific manuals in other repositories, to ./common so they
use the dynamically created symlink that always points to the right
path.

(moving manuals to project repositories 8/19)

Related: OS#3385
Change-Id: Id984f5e85481f7877567ee6d21f7ca455d773ef1

--- a/OsmoBTS/osmobts-abis.adoc
+++ b/OsmoBTS/osmobts-abis.adoc
@@ -85,8 +85,8 @@ include::abis/rsl.adoc[]
 
 include::abis/rtp.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
