--- a/OsmoBTS/osmobts-usermanual.adoc
+++ b/OsmoBTS/osmobts-usermanual.adoc
@@ -4,19 +4,19 @@ OsmoBTS User Manual
 ===================
 Harald Welte <hwelte@sysmocom.de>
 
-include::../common/chapters/preface.adoc[]
+include::./common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
-include::../common/chapters/abis.adoc[]
+include::./common/chapters/abis.adoc[]
 
 include::chapters/interfaces.adoc[]
 
 include::chapters/control.adoc[]
 
-include::../common/chapters/vty.adoc[]
+include::./common/chapters/vty.adoc[]
 
-include::../common/chapters/logging.adoc[]
+include::./common/chapters/logging.adoc[]
 
 include::chapters/configuration.adoc[]
 
@@ -26,14 +26,14 @@ include::chapters/bts-models.adoc[]
 
 include::chapters/architecture.adoc[]
 
-include::../common/chapters/trx_if.adoc[]
+include::./common/chapters/trx_if.adoc[]
 
-include::../common/chapters/control_if.adoc[]
+include::./common/chapters/control_if.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/bibliography.adoc[]
+include::./common/chapters/bibliography.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
