--- a/OsmoGGSN/osmoggsn-usermanual.adoc
+++ b/OsmoGGSN/osmoggsn-usermanual.adoc
@@ -3,7 +3,7 @@ OsmoGGSN User Manual
 Harald Welte <hwelte@sysmocom.de>
 
 
-include::../common/chapters/preface.adoc[]
+include::./common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
@@ -11,19 +11,19 @@ include::chapters/running.adoc[]
 
 //include::chapters/control.adoc[]
 
-include::../common/chapters/vty.adoc[]
+include::./common/chapters/vty.adoc[]
 
-include::../common/chapters/logging.adoc[]
+include::./common/chapters/logging.adoc[]
 
 
 include::chapters/configuration.adoc[]
 
-include::../common/chapters/control_if.adoc[]
+include::./common/chapters/control_if.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/bibliography.adoc[]
+include::./common/chapters/bibliography.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
