--- a/OsmoMGW/osmomgw-usermanual.adoc
+++ b/OsmoMGW/osmomgw-usermanual.adoc
@@ -6,15 +6,15 @@ OsmoMGW User Manual
 Daniel Willmann <dwillmann@sysmocom.de>
 
 
-include::../common/chapters/preface.adoc[]
+include::./common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
 include::chapters/running.adoc[]
 
-include::../common/chapters/vty.adoc[]
+include::./common/chapters/vty.adoc[]
 
-include::../common/chapters/logging.adoc[]
+include::./common/chapters/logging.adoc[]
 
 include::chapters/configuration.adoc[]
 
@@ -22,12 +22,12 @@ include::chapters/mgcp_extensions.adoc[]
 
 //include::chapters/counters.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/bibliography.adoc[]
+include::./common/chapters/bibliography.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
 
 
