--- a/OsmoMSC/osmomsc-usermanual.adoc
+++ b/OsmoMSC/osmomsc-usermanual.adoc
@@ -6,7 +6,7 @@ OsmoMSC User Manual
 Neels Hofmeyr <nhofmeyr@sysmocom.de>
 
 
-include::../common/chapters/preface.adoc[]
+include::./common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
@@ -16,25 +16,25 @@ include::chapters/control.adoc[]
 
 include::chapters/counters.adoc[]
 
-include::../common/chapters/vty.adoc[]
+include::./common/chapters/vty.adoc[]
 
-include::../common/chapters/logging.adoc[]
+include::./common/chapters/logging.adoc[]
 
 include::chapters/net.adoc[]
 
-include::../common/chapters/smpp.adoc[]
+include::./common/chapters/smpp.adoc[]
 
-include::../common/chapters/mncc.adoc[]
+include::./common/chapters/mncc.adoc[]
 
-include::../common/chapters/control_if.adoc[]
+include::./common/chapters/control_if.adoc[]
 
-include::../common/chapters/gsup.adoc[]
+include::./common/chapters/gsup.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/bibliography.adoc[]
+include::./common/chapters/bibliography.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
 
