--- a/OsmoTRX/osmotrx-usermanual.adoc
+++ b/OsmoTRX/osmotrx-usermanual.adoc
@@ -5,19 +5,19 @@ OsmoTRX User Manual
 Pau Espin Pedrol <pespin@sysmocom.de>
 
 
-include::../common/chapters/preface.adoc[]
+include::./common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
 include::chapters/running.adoc[]
 
-include::../common/chapters/control_if.adoc[]
+include::./common/chapters/control_if.adoc[]
 
 include::chapters/control.adoc[]
 
-include::../common/chapters/vty.adoc[]
+include::./common/chapters/vty.adoc[]
 
-include::../common/chapters/logging.adoc[]
+include::./common/chapters/logging.adoc[]
 
 include::chapters/counters.adoc[]
 
@@ -31,12 +31,12 @@ include::chapters/trx-backends.adoc[]
 
 include::chapters/code-architecture.adoc[]
 
-include::../common/chapters/trx_if.adoc[]
+include::./common/chapters/trx_if.adoc[]
 
-include::../common/chapters/port_numbers.adoc[]
+include::./common/chapters/port_numbers.adoc[]
 
-include::../common/chapters/bibliography.adoc[]
+include::./common/chapters/bibliography.adoc[]
 
-include::../common/chapters/glossary.adoc[]
+include::./common/chapters/glossary.adoc[]
 
-include::../common/chapters/gfdl.adoc[]
+include::./common/chapters/gfdl.adoc[]
