INSTALL.txt: "make check" needs libxml2-utils
Change-Id: I6fba644cff833c912f6d83651a1ee27c1c4884d2

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -14,6 +14,10 @@ apt-get install \
 
 (Note that asciidoc-dblatex is required from debian 9 on and did not exist before.)
 
+Dependencies for "make check":
+
+apt-get install libxml2-utils
+
 Prepare your build dir:
   autoreconf -fi
   ./configure
