--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+osmo-gsm-manuals-dev (0.1.0) unstable; urgency=medium
+
+  * Proper release number, which will also get tagged.
+
+ -- Oliver Smith <osmith@sysmocom.de>  Mon, 15 Apr 2019 09:39:51 +0200
+
 osmo-gsm-manuals-dev (0.0.0) unstable; urgency=medium
 
   * Initial Release.
