Fix python-nwdiag dependency on new debian distros
As seen by https://packages.debian.org, python-nwdiag is only available
in buster and older stables, while python3-nwdiag is available in both
old and new releases as well as testing and unstable.

Related: OS#4246
Depends: osmo-ci I0ebee6ac11df779ab954bd6648a0bebefc3350a2
Change-Id: Ia2c0c833329f8ecab1c427e0d2c002f17ab49a94

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -10,7 +10,7 @@ apt-get install \
   mscgen \
   graphviz \
   python-pychart \
-  python-nwdiag
+  python3-nwdiag
 
 (Note that asciidoc-dblatex is required from debian 9 on and did not exist before.)
 
