--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+osmo-gsm-manuals-dev (1.6.1) unstable; urgency=medium
+
+  [ Mychaela N. Falconia ]
+  * bibliography.adoc: add TW-TS-* references
+
+ -- Oliver Smith <osmith@sysmocom.de>  Wed, 12 Feb 2025 09:27:42 +0100
+
 osmo-gsm-manuals-dev (1.6.0) unstable; urgency=medium
 
   [ Pau Espin Pedrol ]
